Upgrade e-commerce-backend to Spring Boot 3.5 and Java 17, add error handling for Kafka send, and update tests to use AssertJ