@@ -2,6 +2,7 @@ package com.example.ecommerce.service;
 
 import com.example.ecommerce.dto.ProductRequest;
 import com.example.ecommerce.entity.Product;
+import com.example.ecommerce.mapper.ProductMapper;
 import com.example.ecommerce.repository.ProductRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -11,11 +12,11 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
@@ -25,10 +26,14 @@ class ProductServiceTest {
     @Mock
     private ProductRepository productRepository;
 
+    @Mock
+    private ProductMapper productMapper;
+
     @InjectMocks
     private ProductService productService;
 
     private ProductRequest productRequest;
+    private Product product;
 
     @BeforeEach
     void setUp() {
@@ -37,43 +42,138 @@ class ProductServiceTest {
         productRequest.setDescription("Test Description");
         productRequest.setPrice(BigDecimal.valueOf(99.99));
         productRequest.setStock(10);
+
+        product = new Product();
+        product.setId(1L);
+        product.setName("Test Product");
+        product.setDescription("Test Description");
+        product.setPrice(BigDecimal.valueOf(99.99));
+        product.setStock(10);
     }
 
     @Test
     void createProduct_ShouldCreateProduct() {
-        when(productRepository.save(any(Product.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        // Given
+        when(productMapper.toEntity(any(ProductRequest.class))).thenReturn(product);
+        when(productRepository.save(any(Product.class))).thenReturn(product);
 
-        Product created = productService.createProduct(productRequest);
+        // When
+        var created = productService.createProduct(productRequest);
 
-        assertNotNull(created);
-        assertEquals("Test Product", created.getName());
-        assertEquals(BigDecimal.valueOf(99.99), created.getPrice());
+        // Then
+        assertThat(created).isNotNull();
+        assertThat(created.getName()).isEqualTo("Test Product");
+        assertThat(created.getPrice()).isEqualTo(BigDecimal.valueOf(99.99));
         verify(productRepository).save(any(Product.class));
     }
 
     @Test
-    void getProductById_ShouldReturnProduct_WhenExists() {
-        Product product = new Product();
-        product.setId(1L);
-        product.setName("Test Product");
-
+    void getProductById_ShouldReturnProduct_WhenProductExists() {
+        // Given
         when(productRepository.findById(1L)).thenReturn(Optional.of(product));
 
-        Optional<Product> result = productService.getProductById(1L);
+        // When
+        var result = productService.getProductById(1L);
 
-        assertTrue(result.isPresent());
-        assertEquals("Test Product", result.get().getName());
+        // Then
+        assertThat(result).isPresent();
+        assertThat(result.get().getId()).isEqualTo(1L);
+        assertThat(result.get().getName()).isEqualTo("Test Product");
+    }
+
+    @Test
+    void getProductById_ShouldReturnEmpty_WhenProductDoesNotExist() {
+        // Given
+        when(productRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // When
+        var result = productService.getProductById(999L);
+
+        // Then
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void getAllProducts_ShouldReturnAllProducts() {
+        // Given
+        var products = List.of(product, new Product());
+        when(productRepository.findAll()).thenReturn(products);
+
+        // When
+        var result = productService.getAllProducts();
+
+        // Then
+        assertThat(result).hasSize(2);
+        verify(productRepository).findAll();
+    }
+
+    @Test
+    void getAllProducts_ShouldReturnEmptyList_WhenNoProducts() {
+        // Given
+        when(productRepository.findAll()).thenReturn(List.of());
+
+        // When
+        var result = productService.getAllProducts();
+
+        // Then
+        assertThat(result).isEmpty();
     }
 
     @Test
     void searchProductsByName_ShouldReturnMatchingProducts() {
+        // Given
         when(productRepository.findByNameContainingIgnoreCase("phone"))
-                .thenReturn(Collections.emptyList());
+                .thenReturn(List.of());
 
-        List<Product> result = productService.searchProductsByName("phone");
+        // When
+        var result = productService.searchProductsByName("phone");
 
-        assertNotNull(result);
-        assertTrue(result.isEmpty());
+        // Then
+        assertThat(result).isEmpty();
         verify(productRepository).findByNameContainingIgnoreCase("phone");
+    }
+
+    @Test
+    void updateProduct_ShouldUpdateProduct_WhenProductExists() {
+        // Given
+        var updateRequest = new ProductRequest();
+        updateRequest.setName("Updated Name");
+        updateRequest.setPrice(BigDecimal.valueOf(199.99));
+
+        when(productRepository.findById(1L)).thenReturn(Optional.of(product));
+        doNothing().when(productMapper).updateEntity(updateRequest, any(Product.class));
+        when(productRepository.save(any(Product.class))).thenReturn(product);
+
+        // When
+        var updated = productService.updateProduct(1L, updateRequest);
+
+        // Then
+        assertThat(updated).isNotNull();
+        verify(productRepository).findById(1L);
+        verify(productRepository).save(product);
+    }
+
+    @Test
+    void updateProduct_ShouldThrowException_WhenProductDoesNotExist() {
+        // Given
+        when(productRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // When / Then
+        assertThatThrownBy(() -> productService.updateProduct(999L, productRequest))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("Product not found with id: 999");
+        verify(productRepository, never()).save(any());
+    }
+
+    @Test
+    void deleteProduct_ShouldDeleteProduct() {
+        // Given
+        doNothing().when(productRepository).deleteById(1L);
+
+        // When
+        productService.deleteProduct(1L);
+
+        // Then
+        verify(productRepository).deleteById(1L);
     }
 }
