@@ -10,11 +10,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
@@ -28,6 +28,7 @@ class UserServiceTest {
     private UserService userService;
 
     private UserRequest userRequest;
+    private User user;
 
     @BeforeEach
     void setUp() {
@@ -37,63 +38,116 @@ class UserServiceTest {
         userRequest.setPassword("password");
         userRequest.setFirstName("Test");
         userRequest.setLastName("User");
+
+        user = new User();
+        user.setId(1L);
+        user.setUsername("testuser");
+        user.setEmail("test@example.com");
     }
 
     @Test
     void createUser_ShouldCreateUser_WhenUsernameAndEmailAreUnique() {
+        // Given
         when(userRepository.existsByUsername("testuser")).thenReturn(false);
         when(userRepository.existsByEmail("test@example.com")).thenReturn(false);
-        when(userRepository.save(any(User.class))).thenAnswer(invocation -> invocation.getArgument(0));
+        when(userRepository.save(any(User.class))).thenReturn(user);
 
-        User created = userService.createUser(userRequest);
+        // When
+        var created = userService.createUser(userRequest);
 
-        assertNotNull(created);
-        assertEquals("testuser", created.getUsername());
-        assertEquals("test@example.com", created.getEmail());
+        // Then
+        assertThat(created).isNotNull();
+        assertThat(created.getUsername()).isEqualTo("testuser");
+        assertThat(created.getEmail()).isEqualTo("test@example.com");
         verify(userRepository).save(any(User.class));
     }
 
     @Test
-    void createUser_ShouldThrowException_WhenUsernameExists() {
+    void createUser_ShouldThrowException_WhenUsernameAlreadyExists() {
+        // Given
         when(userRepository.existsByUsername("testuser")).thenReturn(true);
 
-        RuntimeException exception = assertThrows(RuntimeException.class,
-                () -> userService.createUser(userRequest));
-
-        assertTrue(exception.getMessage().contains("already exists"));
+        // When / Then
+        assertThatThrownBy(() -> userService.createUser(userRequest))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("already exists");
         verify(userRepository, never()).save(any(User.class));
     }
 
     @Test
-    void getUserById_ShouldReturnUser_WhenExists() {
-        User user = new User();
-        user.setId(1L);
-        user.setUsername("testuser");
+    void createUser_ShouldThrowException_WhenEmailAlreadyExists() {
+        // Given
+        when(userRepository.existsByUsername("testuser")).thenReturn(false);
+        when(userRepository.existsByEmail("test@example.com")).thenReturn(true);
 
-        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
-
-        Optional<User> result = userService.getUserById(1L);
-
-        assertTrue(result.isPresent());
-        assertEquals("testuser", result.get().getUsername());
+        // When / Then
+        assertThatThrownBy(() -> userService.createUser(userRequest))
+                .isInstanceOf(RuntimeException.class)
+                .hasMessageContaining("already exists");
+        verify(userRepository, never()).save(any(User.class));
     }
 
     @Test
-    void getUserById_ShouldReturnEmpty_WhenNotExists() {
-        when(userRepository.findById(1L)).thenReturn(Optional.empty());
+    void getUserById_ShouldReturnUser_WhenUserExists() {
+        // Given
+        when(userRepository.findById(1L)).thenReturn(Optional.of(user));
 
-        Optional<User> result = userService.getUserById(1L);
+        // When
+        var result = userService.getUserById(1L);
 
-        assertTrue(result.isEmpty());
+        // Then
+        assertThat(result).isPresent();
+        assertThat(result.get().getId()).isEqualTo(1L);
+        assertThat(result.get().getUsername()).isEqualTo("testuser");
+    }
+
+    @Test
+    void getUserById_ShouldReturnEmpty_WhenUserDoesNotExist() {
+        // Given
+        when(userRepository.findById(999L)).thenReturn(Optional.empty());
+
+        // When
+        var result = userService.getUserById(999L);
+
+        // Then
+        assertThat(result).isEmpty();
     }
 
     @Test
     void getAllUsers_ShouldReturnAllUsers() {
-        when(userRepository.findAll()).thenReturn(Collections.emptyList());
+        // Given
+        var users = List.of(user, new User());
+        when(userRepository.findAll()).thenReturn(users);
 
-        List<User> users = userService.getAllUsers();
+        // When
+        var result = userService.getAllUsers();
 
-        assertNotNull(users);
-        assertTrue(users.isEmpty());
+        // Then
+        assertThat(result).hasSize(2);
+        verify(userRepository).findAll();
+    }
+
+    @Test
+    void getAllUsers_ShouldReturnEmptyList_WhenNoUsers() {
+        // Given
+        when(userRepository.findAll()).thenReturn(List.of());
+
+        // When
+        var result = userService.getAllUsers();
+
+        // Then
+        assertThat(result).isEmpty();
+    }
+
+    @Test
+    void deleteUser_ShouldDeleteUser() {
+        // Given
+        doNothing().when(userRepository).deleteById(1L);
+
+        // When
+        userService.deleteUser(1L);
+
+        // Then
+        verify(userRepository).deleteById(1L);
     }
 }
